fix(core): fix layout issues on index, navbar, and footer
Resolve spacing and alignment bugs on the main page, including:
- index.html structure adjustment
- navbar position on scroll
- footer responsiveness issues
- more responsive in all layout (phone, tablet)

--- a/styles/scss/_footer.scss
+++ b/styles/scss/_footer.scss
@@ -49,7 +49,18 @@
     /*tablet*/
     @media (min-width: 41rem) and (max-width: 60rem){
         padding: 2rem;
-        gap: 3rem;
+        gap: 1rem;
+        }
+        &_g{
+            flex-direction: row;
+            &_column1{
+            gap: 1.5rem;
+            }
+        }
+        &_column2{
+            p, ul{
+                line-height: 1rem;
+            }
         }
     /*mobile*/
     @media (min-width: 20rem) and (max-width: 40rem){
@@ -71,3 +82,35 @@
         }
 
 }
+
+    // <footer id="a965_footer" class="a965_footer">
+    //     <div class="a965_footer_logo">
+    //         <a href="index.html"><img src="images/home/19sixtyfive Logo-White.png" alt="1965 Logo White"></a>
+    //     </div>
+    //     <ul class="a965_footer_column1">
+    //         <li><a href="single.html">Festivals</a></li>
+    //         <li><a href="community.html">Community</a></li>
+    //         <li><a href="artist-spotlight.html">Artist Spotlight</a></li>
+    //         <li><a href="brands-collab.html">Brands Collab</a></li>
+    //     </ul>
+    //     <ul class="a965_footer_column1">
+    //         <li><a href="sports.html">Sports</a></li>
+    //         <li><a href="news.html">News</a></li>
+    //         <li><a href="our-fam.html">Our Fam</a></li>
+    //         <li><a href="">Youtube</a></li>
+    //     </ul>
+    //     <div class="a965_footer_column2">
+    //         <p>27 Pasir Panjang Road<br>
+    //         Pasir Panjang Power Station<br>
+    //         Singapore 117537</p>
+    //         <ul>
+    //             <li>+65 6475 9200</li>
+    //             <li>contact@19sixtyfive.com.sg</li>
+    //         </ul>
+    //     </div>
+    //     <ul class="a965_footer_column1">
+    //         <li><a href="https://24owls.sg/">24owls.sg</a></li>
+    //         <li><a href="https://sixtyfive.sg/">sixtyfive.sg</a></li>
+    //         <li><a href="https://tangentmoves.sg/">tangentmoves.sg</a></li>
+    //     </ul>
+    // </footer>
